// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Web App Framework Compiler Compiles complex-expressions.jsx 1`] = `
"import { signal as _signal, effect as _effect, renderDynamic as _renderDynamic, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class ComplexExpressionsElement extends HTMLElement {
  static observedAttributes = ["theme", "color", "loading", "title", "logMessage"];
  set theme(val) {
    this._propsSignals["theme"].value = val;
  }
  set color(val) {
    this._propsSignals["color"].value = val;
  }
  set loading(val) {
    this._propsSignals["loading"].value = val;
  }
  set title(val) {
    this._propsSignals["title"].value = val;
  }
  set logMessage(val) {
    this._propsSignals["logMessage"].value = val;
  }
  get theme() {
    return this._propsSignals["theme"].value;
  }
  get color() {
    return this._propsSignals["color"].value;
  }
  get loading() {
    return this._propsSignals["loading"].value;
  }
  get title() {
    return this._propsSignals["title"].value;
  }
  get logMessage() {
    return this._propsSignals["logMessage"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      theme: _signal(null),
      color: _signal(null),
      loading: _signal(null),
      title: _signal(null),
      logMessage: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let count = _signal(0);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _effect(() => el0.className = props.theme);
        _effect(() => Object.assign(el0.style, {
          color: props.color,
          opacity: count.value > 5 ? 1 : 0.5
        }));
        _renderDynamic(el0, () => props.loading ? (() => {
          const el0 = document.createElement("span");
          const text1 = document.createTextNode("Loading...");
          el0.appendChild(text1);
          return el0;
        })() : (() => {
          const el0 = document.createElement("div");
          const el1 = document.createElement("h1");
          _renderDynamic(el1, () => props.title);
          el0.appendChild(el1);
          const el2 = document.createElement("button");
          el2.onclick = () => console.log(props.logMessage);
          const text3 = document.createTextNode(" Log ");
          el2.appendChild(text3);
          _renderDynamic(el2, () => count.value);
          el0.appendChild(el2);
          return el0;
        })());
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-complexexpressions", ComplexExpressionsElement);
export default ComplexExpressionsElement;"
`;

exports[`Web App Framework Compiler Compiles conditional.jsx 1`] = `
"import { renderDynamic as _renderDynamic, signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class ItemElement extends HTMLElement {
  static observedAttributes = ["name", "isPacked"];
  set name(val) {
    this._propsSignals["name"].value = val;
  }
  set isPacked(val) {
    this._propsSignals["isPacked"].value = val;
  }
  get name() {
    return this._propsSignals["name"].value;
  }
  get isPacked() {
    return this._propsSignals["isPacked"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      name: _signal(null),
      isPacked: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("li");
        el0.className = "item";
        _renderDynamic(el0, () => props.isPacked ? (() => {
          const el0 = document.createElement("del");
          _renderDynamic(el0, () => props.name + ' ✅');
          return el0;
        })() : props.name);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-item", ItemElement);
export default ItemElement;"
`;

exports[`Web App Framework Compiler Compiles routing-404.404.jsx 1`] = `
"export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    const text2 = document.createTextNode("404 - Not Found");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    const text4 = document.createTextNode("The page you are looking for does not exist.");
    el3.appendChild(text4);
    el0.appendChild(el3);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`Web App Framework Compiler Compiles children-projection.jsx 1`] = `
"import { signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class WrapperElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        el0.className = "wrapper";
        const el1 = document.createElement("header");
        const text2 = document.createTextNode("Header");
        el1.appendChild(text2);
        el0.appendChild(el1);
        const el3 = document.createElement("main");
        el0.appendChild(el3);
        const el4 = document.createElement("footer");
        const text5 = document.createTextNode("Footer");
        el4.appendChild(text5);
        el0.appendChild(el4);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-wrapper", WrapperElement);
export default WrapperElement;"
`;

exports[`Web App Framework Compiler Compiles lifecycle.jsx 1`] = `
"import { onMount as _onMount, onCleanup as _onCleanup, signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class LifecycleElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      _onMount(() => {
        console.log("mounted");
      });
      _onCleanup(() => {
        console.log("cleaned up");
      });
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const text1 = document.createTextNode("Lifecycle");
        el0.appendChild(text1);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-lifecycle", LifecycleElement);
export default LifecycleElement;"
`;

exports[`Web App Framework Compiler Compiles reactivity.jsx 1`] = `
"import { signal as _signal, effect as _effect, renderDynamic as _renderDynamic, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
import { signal } from "@preact/signals";
class ReactivityElement extends HTMLElement {
  static observedAttributes = ["title"];
  set title(val) {
    this._propsSignals["title"].value = val;
  }
  get title() {
    return this._propsSignals["title"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      title: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let count = _signal(0);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _effect(() => el0.title = props.title);
        const el1 = document.createElement("span");
        _renderDynamic(el1, () => count.value);
        el0.appendChild(el1);
        const el2 = document.createElement("button");
        el2.onclick = () => count.value++;
        const text3 = document.createTextNode("Add");
        el2.appendChild(text3);
        el0.appendChild(el2);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-reactivity", ReactivityElement);
export default ReactivityElement;"
`;

exports[`Web App Framework Compiler Compiles basic-form-verify.jsx 1`] = `
"import { computed as _computed, effect as _effect, renderDynamic as _renderDynamic, signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
import { createForm } from "@opentf/web-form";
export class BasicForm extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const form = createForm({
        initialValues: {
          username: ""
        }
      });
      const isValid = _computed(() => form.isValid);
      const isSubmitting = _computed(() => form.isSubmitting);
      const canSubmit = _computed(() => isValid.value && !isSubmitting.value);
      const rootElement = (() => {
        const el0 = document.createElement("section");
        const el1 = document.createElement("button");
        el1.setAttribute("type", "submit");
        _effect(() => el1.disabled = () => !canSubmit.value);
        _renderDynamic(el1, () => () => isSubmitting.value ? "Processing..." : "Save Changes");
        el0.appendChild(el1);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-basicform", BasicForm);"
`;

exports[`Web App Framework Compiler Compiles react-patterns.jsx 1`] = `
"import { effect as _effect, renderDynamic as _renderDynamic, applySpread as _applySpread, signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
import { UI } from './ui-lib';
class ReactPatternsElement extends HTMLElement {
  static observedAttributes = ["user", "notifications"];
  set user(val) {
    this._propsSignals["user"].value = val;
  }
  set notifications(val) {
    this._propsSignals["notifications"].value = val;
  }
  get user() {
    return this._propsSignals["user"].value;
  }
  get notifications() {
    return this._propsSignals["notifications"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      user: _signal(null),
      notifications: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const Tag = props.isHeader ? 'h1' : 'h2';
      const items = ['A', 'B'];
      const rootElement = (() => {
        const el0 = document.createElement("div");
        el0.className = "container";
        el0.setAttribute("data-testid", "main-div");
        const el1 = document.createElement("input");
        el1.disabled = true;
        _effect(() => el1.setAttribute("tab-index", -1));
        _effect(() => el1.setAttribute("max-length", 5));
        el0.appendChild(el1);
        const el2 = document.createElement(Tag);
        const text3 = document.createTextNode("Dynamic Heading");
        el2.appendChild(text3);
        el0.appendChild(el2);
        const el4 = document.createElement("web-ui-button");
        el4.variant = "primary";
        const text5 = document.createTextNode("Click Me");
        el4.appendChild(text5);
        el0.appendChild(el4);
        const el6 = document.createElement("p");
        const text7 = document.createTextNode(" Welcome, ");
        el6.appendChild(text7);
        const el8 = document.createElement("strong");
        _renderDynamic(el8, () => props.user.name);
        el6.appendChild(el8);
        const text9 = document.createTextNode("!  You have ");
        el6.appendChild(text9);
        _renderDynamic(el6, () => props.notifications.length);
        const text10 = document.createTextNode(" new messages. ");
        el6.appendChild(text10);
        el0.appendChild(el6);
        const el11 = document.createElement("div");
        _effect(() => _applySpread(el11, props.extra));
        el11.className = "override";
        el11.id = "constant";
        const text12 = document.createTextNode(" Spread Test ");
        el11.appendChild(text12);
        el0.appendChild(el11);
        const el13 = document.createElement("ul");
        _renderDynamic(el13, () => [(() => {
          const el0 = document.createElement("li");
          el0._key = "1";
          const text1 = document.createTextNode("One");
          el0.appendChild(text1);
          return el0;
        })(), (() => {
          const el0 = document.createElement("li");
          el0._key = "2";
          const text1 = document.createTextNode("Two");
          el0.appendChild(text1);
          return el0;
        })()]);
        el0.appendChild(el13);
        const el14 = document.createElement("web-dataprovider");
        _renderDynamic(el14, () => data => (() => {
          const el0 = document.createElement("div");
          const text1 = document.createTextNode("Data: ");
          el0.appendChild(text1);
          _renderDynamic(el0, () => data.value);
          return el0;
        })());
        el0.appendChild(el14);
        const el15 = document.createElementNS("http://www.w3.org/2000/svg", "svg");
        el15.setAttribute("viewBox", "0 0 100 100");
        el15.setAttribute("xmlns", "http://www.w3.org/2000/svg");
        const el16 = document.createElementNS("http://www.w3.org/2000/svg", "circle");
        el16.setAttribute("cx", "50");
        el16.setAttribute("cy", "50");
        el16.setAttribute("r", "40");
        el16.setAttribute("strokeWidth", "2");
        el16.setAttribute("fill", "red");
        el15.appendChild(el16);
        el0.appendChild(el15);
        const el17 = document.createElement("web-customcomponent");
        el0.appendChild(el17);
        const el18 = document.createElement("br");
        el0.appendChild(el18);
        const el19 = document.createElement("hr");
        el0.appendChild(el19);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-reactpatterns", ReactPatternsElement);
export default ReactPatternsElement;
function DataProvider({
  children
}) {
  const data = {
    value: 'Secret'
  };
  return typeof children === 'function' ? children(data) : children;
}
class CustomComponentElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const text1 = document.createTextNode("Custom");
        el0.appendChild(text1);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-customcomponent", CustomComponentElement);"
`;

exports[`Web App Framework Compiler Compiles nested-reactivity.jsx 1`] = `
"import { signal as _signal, effect as _effect, renderDynamic as _renderDynamic, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class NestedReactivityElement extends HTMLElement {
  static observedAttributes = ["title"];
  set title(val) {
    this._propsSignals["title"].value = val;
  }
  get title() {
    return this._propsSignals["title"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      title: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let show = _signal(true);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => show.value && (() => {
          const el0 = document.createElement("span");
          _effect(() => el0.title = props.title);
          const text1 = document.createTextNode("Hello");
          el0.appendChild(text1);
          return el0;
        })());
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-nestedreactivity", NestedReactivityElement);
export default NestedReactivityElement;"
`;

exports[`Web App Framework Compiler Compiles basic-elements.page.jsx 1`] = `
"export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    const text2 = document.createTextNode("Hello");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    const text4 = document.createTextNode("World");
    el3.appendChild(text4);
    el0.appendChild(el3);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`Web App Framework Compiler Compiles spread.jsx 1`] = `
"import { applySpread as _applySpread, effect as _effect, signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class SpreadTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const props = {
        id: "test",
        className: "foo",
        "data-custom": "bar"
      };
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _effect(() => _applySpread(el0, props));
        const el1 = document.createElement("span");
        _effect(() => _applySpread(el1, {
          style: {
            color: "red"
          }
        }));
        const text2 = document.createTextNode("Hello");
        el1.appendChild(text2);
        el0.appendChild(el1);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-spreadtest", SpreadTestElement);
export default SpreadTestElement;"
`;

exports[`Web App Framework Compiler Compiles state-edge-cases.jsx 1`] = `
"import { signal as _signal, renderDynamic as _renderDynamic, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class StateEdgeCasesElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let count = _signal(0);
      let user = _signal({
        name: "Alice",
        age: 30
      });
      let todos = _signal([]);

      // 1. Basic reassignment
      count.value = 10;

      // 2. Update expressions
      count.value++;
      --count.value;

      // 3. Member expressions
      user.value.name = "Bob";
      const age = user.value.age;
      todos.value.push("learn waf");

      // 4. Object property shorthand
      const data = {
        count: count.value,
        user: user.value
      };

      // 5. Destructuring
      const {
        name
      } = user.value;
      const [first] = todos.value;

      // 6. Computed property access
      const prop = "age";
      console.log(user.value[prop]);

      // 7. Passing as argument
      console.log(count.value, user.value);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("span");
        _renderDynamic(el1, () => count.value);
        el0.appendChild(el1);
        const el2 = document.createElement("span");
        _renderDynamic(el2, () => user.value.name);
        el0.appendChild(el2);
        const el3 = document.createElement("button");
        el3.onclick = () => {
          count.value++;
          user.value.age++;
        };
        const text4 = document.createTextNode("Increment");
        el3.appendChild(text4);
        el0.appendChild(el3);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-stateedgecases", StateEdgeCasesElement);
export default StateEdgeCasesElement;"
`;

exports[`Web App Framework Compiler Compiles styling.jsx 1`] = `
"import { signal as _signal, effect as _effect, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class StylingTestElement extends HTMLElement {
  static observedAttributes = ["theme"];
  set theme(val) {
    this._propsSignals["theme"].value = val;
  }
  get theme() {
    return this._propsSignals["theme"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      theme: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let active = _signal(true);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        el0.className = "static-class";
        el0.className = "static-classname";
        const el1 = document.createElement("span");
        _effect(() => el1.className = active.value ? "active" : "inactive");
        const text2 = document.createTextNode(" Reactive Class ");
        el1.appendChild(text2);
        el0.appendChild(el1);
        const el3 = document.createElement("button");
        _effect(() => el3.className = props.theme);
        const text4 = document.createTextNode(" Reactive ClassName from Props ");
        el3.appendChild(text4);
        el0.appendChild(el3);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-stylingtest", StylingTestElement);
export default StylingTestElement;"
`;

exports[`Web App Framework Compiler Compiles forms.jsx 1`] = `
"import { applySpread as _applySpread, effect as _effect, renderDynamic as _renderDynamic, signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
import { createForm } from "@opentf/web-form";
class FormCaseElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const form = createForm({
        initialValues: {
          name: "Alice"
        }
      });
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("input");
        _effect(() => _applySpread(el1, form.register('name')));
        el0.appendChild(el1);
        const el2 = document.createElement("p");
        const text3 = document.createTextNode("Hello, ");
        el2.appendChild(text3);
        _renderDynamic(el2, () => form.values.name);
        el0.appendChild(el2);
        const el4 = document.createElement("button");
        el4.onclick = form.handleSubmit(v => console.log(v));
        const text5 = document.createTextNode(" Submit ");
        el4.appendChild(text5);
        el0.appendChild(el4);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-formcase", FormCaseElement);
export default FormCaseElement;"
`;

exports[`Web App Framework Compiler Compiles ref.jsx 1`] = `
"import { signal as _signal, onMount as _onMount, effect as _effect, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class CustomInputElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const input = _signal();
      const focus = () => input.value.focus();
      Object.assign(this, {
        focus
      });
      const rootElement = (() => {
        const el0 = document.createElement("input");
        input.value = el0;
        el0.setAttribute("type", "text");
        el0.setAttribute("placeholder", "Custom Input");
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-custominput", CustomInputElement);
class RefTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const myDiv = _signal();
      const myInput = _signal();
      let color = _signal("red");
      _onMount(() => {
        myDiv.value.style.backgroundColor = "lightgray";
        myInput.value.focus();
      });
      const rootElement = (() => {
        const el0 = document.createElement("div");
        myDiv.value = el0;
        _effect(() => Object.assign(el0.style, {
          padding: "20px"
        }));
        const el1 = document.createElement("h1");
        _effect(() => Object.assign(el1.style, {
          color: color.value
        }));
        const text2 = document.createTextNode("Ref Test");
        el1.appendChild(text2);
        el0.appendChild(el1);
        const el3 = document.createElement("web-custominput");
        myInput.value = el3;
        el0.appendChild(el3);
        const el4 = document.createElement("button");
        el4.onclick = () => color.value = "blue";
        const text5 = document.createTextNode("Change Color");
        el4.appendChild(text5);
        el0.appendChild(el4);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-reftest", RefTestElement);
export default RefTestElement;"
`;

exports[`Web App Framework Compiler Compiles products-page.page.jsx 1`] = `
"import { signal as _signal, _mapped, effect as _effect, renderDynamic as _renderDynamic } from "@opentf/web";
export function render(root, props) {
  let products = _signal(Array.from({
    length: 1000
  }, (_, i) => ({
    id: i,
    name: \`Product \${i}\`,
    price: Math.floor(Math.random() * 1000)
  })));
  const shuffle = () => {
    const arr = [...products.value];
    for (let i = arr.length - 1; i > 0; i--) {
      const j = Math.floor(Math.random() * (i + 1));
      [arr[i], arr[j]] = [arr[j], arr[i]];
    }
    products.value = arr;
  };
  const reverse = () => {
    products.value = [...products.value].reverse();
  };
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("div");
    el1.className = "flex justify-between items-center mb-6";
    const el2 = document.createElement("h1");
    el2.className = "text-2xl font-bold text-white";
    const text3 = document.createTextNode("Products (1000 items)");
    el2.appendChild(text3);
    el1.appendChild(el2);
    const el4 = document.createElement("div");
    el4.className = "space-x-4";
    const el5 = document.createElement("button");
    el5.onclick = shuffle;
    el5.className = "bg-indigo-600 px-4 py-2 rounded text-white hover:bg-indigo-500 transition-colors";
    const text6 = document.createTextNode(" Shuffle List ");
    el5.appendChild(text6);
    el4.appendChild(el5);
    const el7 = document.createElement("button");
    el7.onclick = reverse;
    el7.className = "bg-slate-700 px-4 py-2 rounded text-white hover:bg-slate-600 transition-colors";
    const text8 = document.createTextNode(" Reverse List ");
    el7.appendChild(text8);
    el4.appendChild(el7);
    el1.appendChild(el4);
    el0.appendChild(el1);
    const el9 = document.createElement("div");
    el9.className = "grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4";
    const mapped10 = _mapped(() => products.value, p => (() => {
      const el0 = document.createElement("div");
      el0._key = p.value.id;
      el0.className = "p-4 bg-slate-800 rounded border border-slate-700 hover:border-indigo-500 transition-all";
      const el1 = document.createElement("div");
      el1.className = "font-bold text-white";
      _renderDynamic(el1, () => p.value.name);
      el0.appendChild(el1);
      const el2 = document.createElement("div");
      el2.className = "text-slate-400 mt-1";
      const text3 = document.createTextNode("$");
      el2.appendChild(text3);
      _renderDynamic(el2, () => p.value.price);
      el0.appendChild(el2);
      const el4 = document.createElement("input");
      el4.setAttribute("placeholder", "Add note...");
      el4.className = "mt-2 w-full bg-slate-900 border border-slate-700 rounded px-2 py-1 text-sm text-slate-300 focus:outline-none focus:border-indigo-500";
      el0.appendChild(el4);
      return el0;
    })());
    _renderDynamic(el9, () => mapped10());
    el0.appendChild(el9);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`Web App Framework Compiler Compiles comments.page.jsx 1`] = `
"export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    const text2 = document.createTextNode("Title");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    el3.className = "foo";
    const text4 = document.createTextNode(" Content ");
    el3.appendChild(text4);
    el0.appendChild(el3);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`Web App Framework Compiler Compiles svg.jsx 1`] = `
"import { signal as _signal, effect as _effect, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class SvgTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let strokeWidth = _signal(2);
      const rootElement = (() => {
        const el0 = document.createElementNS("http://www.w3.org/2000/svg", "svg");
        el0.setAttribute("width", "100");
        el0.setAttribute("height", "100");
        el0.setAttribute("viewBox", "0 0 100 100");
        const el1 = document.createElementNS("http://www.w3.org/2000/svg", "circle");
        el1.setAttribute("cx", "50");
        el1.setAttribute("cy", "50");
        el1.setAttribute("r", "40");
        el1.setAttribute("stroke", "red");
        _effect(() => el1.setAttribute("strokeWidth", strokeWidth.value));
        el1.setAttribute("fill", "transparent");
        el0.appendChild(el1);
        const el2 = document.createElementNS("http://www.w3.org/2000/svg", "path");
        el2.setAttribute("d", "M 10 10 L 90 90");
        el2.setAttribute("stroke", "blue");
        el2.setAttribute("strokeLinecap", "round");
        el0.appendChild(el2);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-svgtest", SvgTestElement);
export default SvgTestElement;"
`;

exports[`Web App Framework Compiler Compiles component-props.jsx 1`] = `
"import { signal as _signal, effect as _effect, renderDynamic as _renderDynamic, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class ParentElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let count = _signal(0);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("web-child");
        _effect(() => el1.val = count.value);
        el0.appendChild(el1);
        const el2 = document.createElement("button");
        el2.onclick = () => count.value++;
        const text3 = document.createTextNode("Inc");
        el2.appendChild(text3);
        el0.appendChild(el2);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-parent", ParentElement);
export default ParentElement;
class ChildElement extends HTMLElement {
  static observedAttributes = ["val"];
  set val(val) {
    this._propsSignals["val"].value = val;
  }
  get val() {
    return this._propsSignals["val"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      val: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => props.val);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-child", ChildElement);"
`;

exports[`Web App Framework Compiler Compiles multiple-components.jsx 1`] = `
"import { effect as _effect, renderDynamic as _renderDynamic, signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class MultipleComponentsElement extends HTMLElement {
  static observedAttributes = ["a", "b"];
  set a(val) {
    this._propsSignals["a"].value = val;
  }
  set b(val) {
    this._propsSignals["b"].value = val;
  }
  get a() {
    return this._propsSignals["a"].value;
  }
  get b() {
    return this._propsSignals["b"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      a: _signal(null),
      b: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("web-a");
        _effect(() => el1.val = props.a);
        el0.appendChild(el1);
        const el2 = document.createElement("web-b");
        _effect(() => el2.val = props.b);
        el0.appendChild(el2);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-multiplecomponents", MultipleComponentsElement);
export default MultipleComponentsElement;
class AElement extends HTMLElement {
  static observedAttributes = ["val"];
  set val(val) {
    this._propsSignals["val"].value = val;
  }
  get val() {
    return this._propsSignals["val"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      val: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => props.val);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-a", AElement);
class BElement extends HTMLElement {
  static observedAttributes = ["val"];
  set val(val) {
    this._propsSignals["val"].value = val;
  }
  get val() {
    return this._propsSignals["val"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      val: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => props.val);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-b", BElement);"
`;

exports[`Web App Framework Compiler Compiles routing-layout.layout.jsx 1`] = `
"import { renderDynamic as _renderDynamic } from "@opentf/web";
export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    el0.className = "root-layout";
    const el1 = document.createElement("nav");
    const el2 = document.createElement("a");
    el2.href = "/";
    const text3 = document.createTextNode("Home");
    el2.appendChild(text3);
    el1.appendChild(el2);
    el0.appendChild(el1);
    const el4 = document.createElement("main");
    _renderDynamic(el4, () => props.children);
    el0.appendChild(el4);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`Web App Framework Compiler Compiles catch-all-page.page.jsx 1`] = `
"import { _mapped, renderDynamic as _renderDynamic } from "@opentf/web";
export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    el1.className = "text-2xl font-bold";
    const text2 = document.createTextNode("Shop");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    el3.className = "mt-4";
    const text4 = document.createTextNode("Slug segments: ");
    el3.appendChild(text4);
    el0.appendChild(el3);
    const el5 = document.createElement("ul");
    el5.className = "list-disc ml-6 mt-2";
    const mapped6 = _mapped(() => props.params.slug, segment => (() => {
      const el0 = document.createElement("li");
      _renderDynamic(el0, () => segment.value);
      return el0;
    })());
    _renderDynamic(el5, () => mapped6());
    el0.appendChild(el5);
    const el7 = document.createElement("div");
    el7.className = "mt-4 p-4 bg-slate-800 rounded";
    const text8 = document.createTextNode(" Full path: ");
    el7.appendChild(text8);
    const el9 = document.createElement("span");
    el9.className = "text-indigo-400 font-mono";
    const text10 = document.createTextNode("/shop/");
    el9.appendChild(text10);
    _renderDynamic(el9, () => props.params.slug.join('/'));
    el7.appendChild(el9);
    el0.appendChild(el7);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`Web App Framework Compiler Compiles inline-styles.jsx 1`] = `
"import { signal as _signal, effect as _effect, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class StyleTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let color = _signal("red");
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _effect(() => Object.assign(el0.style, {
          display: "flex",
          gap: "10px"
        }));
        const el1 = document.createElement("span");
        _effect(() => Object.assign(el1.style, {
          color: color.value
        }));
        const text2 = document.createTextNode(" Reactive Style ");
        el1.appendChild(text2);
        el0.appendChild(el1);
        const el3 = document.createElement("div");
        el3.style = "font-weight: bold;";
        const text4 = document.createTextNode(" Static Style String ");
        el3.appendChild(text4);
        el0.appendChild(el3);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-styletest", StyleTestElement);
export default StyleTestElement;"
`;

exports[`Web App Framework Compiler Compiles macros.jsx 1`] = `
"import { signal as _signal, computed as _computed, effect as _effect, renderDynamic as _renderDynamic, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class MacroTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let count = _signal(0);
      const doubled = _computed(() => count.value * 2);
      _effect(() => {
        console.log("Count changed:", count.value);
      });
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("p");
        const text2 = document.createTextNode("Count: ");
        el1.appendChild(text2);
        _renderDynamic(el1, () => count.value);
        el0.appendChild(el1);
        const el3 = document.createElement("p");
        const text4 = document.createTextNode("Doubled: ");
        el3.appendChild(text4);
        _renderDynamic(el3, () => doubled.value);
        el0.appendChild(el3);
        const el5 = document.createElement("button");
        el5.onclick = () => count.value++;
        const text6 = document.createTextNode("Increment");
        el5.appendChild(text6);
        el0.appendChild(el5);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-macrotest", MacroTestElement);
export default MacroTestElement;"
`;

exports[`Web App Framework Compiler Compiles list-rendering.jsx 1`] = `
"import { signal as _signal, _mapped, renderDynamic as _renderDynamic, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class ListRenderingElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let items = _signal(['A', 'B', 'C']);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("ul");
        const mapped2 = _mapped(() => items.value, item => (() => {
          const el0 = document.createElement("li");
          const text1 = document.createTextNode("Item ");
          el0.appendChild(text1);
          _renderDynamic(el0, () => item.value);
          return el0;
        })());
        _renderDynamic(el1, () => mapped2());
        el0.appendChild(el1);
        const el3 = document.createElement("button");
        el3.onclick = () => items.value = [...items.value, 'D'];
        const text4 = document.createTextNode(" Add ");
        el3.appendChild(text4);
        el0.appendChild(el3);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-listrendering", ListRenderingElement);
export default ListRenderingElement;"
`;

exports[`Web App Framework Compiler Compiles icon-library.jsx 1`] = `
"import { effect as _effect, applySpread as _applySpread, signal as _signal, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class IconGalleryElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        el0.className = "flex gap-4";
        const el1 = document.createElement("web-cameraicon");
        _effect(() => el1.size = 32);
        el1.color = "red";
        el0.appendChild(el1);
        const el2 = document.createElement("web-usericon");
        _effect(() => el2.size = 24);
        el2.className = "text-blue-500";
        el0.appendChild(el2);
        const el3 = document.createElement("web-settingsicon");
        _effect(() => el3.strokeWidth = 3);
        el0.appendChild(el3);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-icongallery", IconGalleryElement);
export default IconGalleryElement;
class CameraIconElement extends HTMLElement {
  static observedAttributes = ["size", "color"];
  set size(val) {
    this._propsSignals["size"].value = val;
  }
  set color(val) {
    this._propsSignals["color"].value = val;
  }
  get size() {
    return this._propsSignals["size"].value;
  }
  get color() {
    return this._propsSignals["color"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      size: _signal(null),
      color: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElementNS("http://www.w3.org/2000/svg", "svg");
        el0.setAttribute("xmlns", "http://www.w3.org/2000/svg");
        _effect(() => el0.setAttribute("width", props.size));
        _effect(() => el0.setAttribute("height", props.size));
        el0.setAttribute("viewBox", "0 0 24 24");
        el0.setAttribute("fill", "none");
        _effect(() => el0.setAttribute("stroke", props.color));
        el0.setAttribute("strokeWidth", "2");
        el0.setAttribute("strokeLinecap", "round");
        el0.setAttribute("strokeLinejoin", "round");
        _effect(() => _applySpread(el0, props));
        const el1 = document.createElementNS("http://www.w3.org/2000/svg", "path");
        el1.setAttribute("d", "M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z");
        el0.appendChild(el1);
        const el2 = document.createElementNS("http://www.w3.org/2000/svg", "circle");
        el2.setAttribute("cx", "12");
        el2.setAttribute("cy", "13");
        el2.setAttribute("r", "4");
        el0.appendChild(el2);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-cameraicon", CameraIconElement);
class UserIconElement extends HTMLElement {
  static observedAttributes = ["size"];
  set size(val) {
    this._propsSignals["size"].value = val;
  }
  get size() {
    return this._propsSignals["size"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      size: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElementNS("http://www.w3.org/2000/svg", "svg");
        el0.setAttribute("xmlns", "http://www.w3.org/2000/svg");
        _effect(() => el0.setAttribute("width", props.size));
        _effect(() => el0.setAttribute("height", props.size));
        el0.setAttribute("viewBox", "0 0 24 24");
        el0.setAttribute("fill", "none");
        el0.setAttribute("stroke", "currentColor");
        el0.setAttribute("strokeWidth", "2");
        el0.setAttribute("strokeLinecap", "round");
        el0.setAttribute("strokeLinejoin", "round");
        _effect(() => _applySpread(el0, props));
        const el1 = document.createElementNS("http://www.w3.org/2000/svg", "path");
        el1.setAttribute("d", "M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2");
        el0.appendChild(el1);
        const el2 = document.createElementNS("http://www.w3.org/2000/svg", "circle");
        el2.setAttribute("cx", "12");
        el2.setAttribute("cy", "7");
        el2.setAttribute("r", "4");
        el0.appendChild(el2);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-usericon", UserIconElement);
class SettingsIconElement extends HTMLElement {
  static observedAttributes = ["strokeWidth"];
  set strokeWidth(val) {
    this._propsSignals["strokeWidth"].value = val;
  }
  get strokeWidth() {
    return this._propsSignals["strokeWidth"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      strokeWidth: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElementNS("http://www.w3.org/2000/svg", "svg");
        el0.setAttribute("xmlns", "http://www.w3.org/2000/svg");
        el0.setAttribute("width", "24");
        el0.setAttribute("height", "24");
        el0.setAttribute("viewBox", "0 0 24 24");
        el0.setAttribute("fill", "none");
        el0.setAttribute("stroke", "currentColor");
        _effect(() => el0.setAttribute("strokeWidth", props.strokeWidth));
        el0.setAttribute("strokeLinecap", "round");
        el0.setAttribute("strokeLinejoin", "round");
        _effect(() => _applySpread(el0, props));
        const el1 = document.createElementNS("http://www.w3.org/2000/svg", "circle");
        el1.setAttribute("cx", "12");
        el1.setAttribute("cy", "12");
        el1.setAttribute("r", "3");
        el0.appendChild(el1);
        const el2 = document.createElementNS("http://www.w3.org/2000/svg", "path");
        el2.setAttribute("d", "M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z");
        el0.appendChild(el2);
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-settingsicon", SettingsIconElement);"
`;

exports[`Web App Framework Compiler Compiles nested-fragments.jsx 1`] = `
"import { signal as _signal, renderDynamic as _renderDynamic, createPropsProxy as _createPropsProxy, withInstance as _withInstance } from "@opentf/web";
class NestedFragmentsElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    this._children = Array.from(this.childNodes);
    while (this.firstChild) this.removeChild(this.firstChild);
    _withInstance(this, () => {
      let show = _signal(true);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => show.value && (() => {
          const frag0 = document.createDocumentFragment();
          const el1 = document.createElement("span");
          const text2 = document.createTextNode("A");
          el1.appendChild(text2);
          frag0.appendChild(el1);
          const frag3 = document.createDocumentFragment();
          const el4 = document.createElement("span");
          const text5 = document.createTextNode("B");
          el4.appendChild(text5);
          frag3.appendChild(el4);
          const el6 = document.createElement("span");
          const text7 = document.createTextNode("C");
          el6.appendChild(text7);
          frag3.appendChild(el6);
          frag0.appendChild(frag3);
          return frag0;
        })());
        return el0;
      })();
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("web-nestedfragments", NestedFragmentsElement);
export default NestedFragmentsElement;"
`;

exports[`Web App Framework Compiler Compiles dynamic-page.page.jsx 1`] = `
"import { onMount as _onMount, onCleanup as _onCleanup, renderDynamic as _renderDynamic } from "@opentf/web";
export function render(root, props) {
  _onMount(() => {
    console.log(\`Post page mounted with ID: \${props.params.id}\`);
  });
  _onCleanup(() => {
    console.log(\`Post page cleaned up with ID: \${props.params.id}\`);
  });
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    el1.className = "text-2xl font-bold";
    const text2 = document.createTextNode("Post ");
    el1.appendChild(text2);
    _renderDynamic(el1, () => props.params.id);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    el3.className = "mt-4";
    const text4 = document.createTextNode("This is a dynamic post page for ID: ");
    el3.appendChild(text4);
    const el5 = document.createElement("span");
    el5.className = "font-mono bg-gray-200 px-1";
    _renderDynamic(el5, () => props.params.id);
    el3.appendChild(el5);
    el0.appendChild(el3);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`Web App Framework Compiler Compiles whitespace.page.jsx 1`] = `
"import { renderDynamic as _renderDynamic } from "@opentf/web";
export function render(root, props) {
  const name = "Web App Framework";
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("span");
    const text2 = document.createTextNode("Hello ");
    el1.appendChild(text2);
    _renderDynamic(el1, () => name);
    const text3 = document.createTextNode("!");
    el1.appendChild(text3);
    el0.appendChild(el1);
    const el4 = document.createElement("p");
    const text5 = document.createTextNode(" Line 1 Line 2 ");
    el4.appendChild(text5);
    el0.appendChild(el4);
    const el6 = document.createElement("div");
    const text7 = document.createTextNode("Spaces should be preserved here -> ");
    el6.appendChild(text7);
    el0.appendChild(el6);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;
